HV-2071 Build with JDK 21